- добавил несколько мыслей